# pyramid_jwt

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  changes.rst  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: example.md  example.rst
src/pyramid_jwt/: __init__.py  policy.py
tests/: test_cookies.py  test_integration.py  test_policy.py
