[metadata]
version = 99.0.0
name = pyramid_jwt
description = JWT authentication policy for Pyramid
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
classifiers =
    Intended Audience :: Developers
    License :: DFSG approved
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
keywords = Pyramid JWT authentication security
author = Wichert Akkerman
author-email = wichert@wiggy.net
home-page = https://github.com/wichert/pyramid_jwt
license = BSD
platforms = any


[options]
zip_safe = True
packages = pyramid_jwt
package_dir = = src
include_package_data = True
install_requires =
    pyramid
    PyJWT

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-freezegun

[tool:pytest]
testpaths = tests
addopts =
  --tb=short
  --verbose

[bdist_wheel]
universal=1
